# metl

./: .gitignore  .gitmodules  Cargo.toml  Readme.md  rustfmt.toml
.cargo/: config
examples/: metal_triangle.rs  mtlinfo.rs
metal-sys/: Cargo.toml
metal-sys/src/: constants.rs  functions.rs  lib.rs  protocols.rs  types.rs
metal-sys/src/classes/: mod.rs  mtl_argument.rs  mtl_array_type.rs  mtl_compile_options.rs  mtl_depth_stencil_descriptor.rs  mtl_depth_stencil_state_descriptor.rs  mtl_render_pass_attachment_descriptor.rs  mtl_render_pass_color_attachment_descriptor.rs  mtl_render_pass_color_attachment_descriptor_array.rs  mtl_render_pass_depth_attachment_descriptor.rs  mtl_render_pass_descriptor.rs  mtl_render_pass_stencil_attachment_descriptor.rs  mtl_sampler_descriptor.rs  mtl_struct_member.rs  mtl_struct_type.rs  mtl_texture_descriptor.rs  mtl_vertex_attribute.rs
metal-sys/src/protocols/: mod.rs  mtl_command_buffer.rs  mtl_command_encoder.rs  mtl_command_queue.rs  mtl_compute_pipeline_state.rs  mtl_depth_stencil_state.rs  mtl_device.rs  mtl_drawable.rs  mtl_function.rs  mtl_library.rs  mtl_render_command_encoder.rs  mtl_resource.rs  mtl_sampler_state.rs  mtl_texture.rs
src/: argument.rs  array_type.rs  blit_command_encoder.rs  buffer.rs  command_buffer.rs  command_encoder.rs  command_queue.rs  compile_options.rs  compute_command_encoder.rs  compute_pipeline_state.rs  constants.rs  depth_stencil_state.rs  device.rs  drawable.rs  error.rs  fence.rs  function.rs  internal.rs  lib.rs  library.rs  objc_bringup.rs  parallel_render_command_encoder.rs  raw.rs  render_command_encoder.rs  render_pass_attachment_descriptor.rs  render_pass_color_attachment_descriptor.rs  render_pass_depth_attachment_descriptor.rs  render_pass_descriptor.rs  render_pass_stencil_attachment_descriptor.rs  render_pipeline_state.rs  resource.rs  sampler_state.rs  stencil_descriptor.rs  struct_member.rs  struct_type.rs  texture.rs  value_types.rs
src/extras/: events.rs  mod.rs  window.rs
tests/: lib.rs
