[package]
name = "metl"
version = "0.0.0"
authors = ["George Burton <burtonageo@gmail.com>"]
license = "MIT"
keywords = ["graphics", "metal", "apple", "mtl"]
description = "High-level bindings for Apple's Metal Graphics API"
repository = "https://github.com/burtonageo/metl"

[dependencies]
block = "0.*"
cocoa = "0.3.0"
core-foundation = "0.*"
objc = "0.2.1"

core-graphics = { version = "0.3.0", optional = true }
winit = { version = "0.5.0", optional = true }
uuid = { version = "0.2.0", optional = true, features = ["v4"] }

[dependencies.metal-sys]
path = "metal-sys"
version = "0.0.0"

[features]
default = ["extras"]
extras = ["MetalKit", "winit", "core-graphics", "uuid"]
MetalKit = []
