[package]
name = "metal-sys"
version = "0.0.0"
authors = ["George Burton <burtonageo@gmail.com>"]
license = "MIT"
keywords = ["graphics", "metal", "apple", "mtl"]
description = "Low-level bindings for Apple's Metal Graphics API"
repository = "https://github.com/burtonageo/mtl-rs"

[target.x86_64-apple-darwin.dependencies]
bitflags = "0.5"
block = "0.*"
cocoa = "0.2.4"
core-foundation = "0.*"
core-graphics = "0.*"
libc = "0.1.8"
objc = "0.1.8"